@@ -328,6 +328,8 @@ void filemap::enc_file_delete( const char *source_dir, const char *dst_dir, cons
             
             if( VERBOSE(1) )
                 std::cout<<"Delete "<<orig_ciphername<<" ("<<plainname<<")"<<std::endl;
+            if( changes_log.get()!=NULL )
+                (*changes_log.get())<<src_file<<std::endl;
             if( unlink( src_file.c_str() )!=0 && errno!=ENOENT )
                 throw rscerror("Erasing file", errno, src_file.c_str());
             if( EXISTS(delkey) ) {
